version 0.5
 - The filename inside Learn tags can now contain wildcards.  Besides
   simplifying the loading of multiple files, this allows the possibility
   of loading AIML files that may not exist without crashing the
   interpreter.

version 0.4.1
 - Unknown AIML tags are handled in a more forgiving fashion.  If an
   unknown tag is encountered, instead of ignoring its contents entirely,
   the contents are processed and returned unaltered.
 - Added support for "bot name='name'" tags, both in patterns and in
   templates.  This also fixes a nasty infinite loop crash when a user
   says Hello to a bot. 

version 0.4
 - Added support for "star" and "sr" tags.
 - Considered adding support for the <secure> tag, but decided against it.
   see SUPPORTED_TAGS.txt for more information.

version 0.3
 - Cleaned up AIML processing code to remove some unnecessary
   special-cases in the interpretation algorithm.
 - Added support for "input" and "that" tags.

version 0.2
 - 50% speedup in Kernel.loadBrain() and Kernel.saveBrain().
 - The optional 'learnFiles' and 'commands' arguments to
   Kernel.bootstrap() can now be either strings or lists. This
   allows multiple files/commands to be loaded during
   initialization.
 - Added support for "person" and "person2" tags.
 - Added general word-substitution functionality.  This opens up
   the potential for localizing PyAIML into non-English languages.
   See DefaultSubs.py for more info.

version 0.1:
 - Initial release.