@@ -3,6 +3,8 @@ version 0.5
    simplifying the loading of multiple files, this allows the possibility
    of loading AIML files that may not exist without crashing the
    interpreter.
+ - Attempting to set the value of a predicate in a nonexistent session
+   now automatically creates the session, instead of silently doing nothing.
 
 version 0.4.1
  - Unknown AIML tags are handled in a more forgiving fashion.  If an
